fix grid spacing and table styling / add demo pages

--- a/sass/parrot.scss
+++ b/sass/parrot.scss
@@ -23,3 +23,19 @@
 @import "parrot/navbar";
 @import "parrot/buttons";
 @import "parrot/headers";
+
+.clearfix:before,
+.clearfix:after,
+.container:before,
+.container:after,
+.row:before,
+.row:after {
+	display: table;
+	content: "";
+}
+
+.clearfix:after,
+.container:after,
+.row:after {
+	clear: both;
+}
