--- a/sass/parrot/_grid.scss
+++ b/sass/parrot/_grid.scss
@@ -1,7 +1,7 @@
 .container {
-	box-sizing: border-box;
 	padding: 0 12px;
 	margin: 0 auto;
+	//@include clearfix;
 
 	@media (min-width: $screen-phablet) {
 		width: $container-phablet;
@@ -14,15 +14,6 @@
 	@media (min-width: $screen-desktop) {
 		width: $container-desktop;
 	}
-}
-
-.container:after, .row:after {
-	display: table;
-	content: "";
-}
-
-.container:before, .container:after, .row:before, .row:after {
-	clear: both;
 }
 
 .row {
