--- a/sass/parrot/_variables.scss
+++ b/sass/parrot/_variables.scss
@@ -86,7 +86,7 @@ $container-desktop:					(1160px + $grid-gutter-width) !default;
 // Tables
 // ----------------------------------------
 // ## Columns, rows, padding, and more.
-$table-padding:						0.5em 1em !default;
+$table-cell-padding:				4px 8px !default;
 
 // Headers
 // ----------------------------------------
