--- a/sass/parrot/mixins/_grid.scss
+++ b/sass/parrot/mixins/_grid.scss
@@ -1,13 +1,12 @@
 @mixin make-row() {
 	margin-left: ceil(($grid-gutter-width / -2));
 	margin-right: floor(($grid-gutter-width / -2));
-	@include clearfix;
+	//@include clearfix;
 }
 
 @mixin make-grid-columns($index) {
 	.columns-#{$index} {
 		position: relative;
-		float: left;
 		min-height: 1px;
 		padding-left: ceil(($grid-gutter-width / 2));
 		padding-right: floor(($grid-gutter-width / 2));
@@ -19,6 +18,7 @@
 		width: 100%;
 
 		@media (min-width: $screen-phablet) {
+			float: left;
 			width: percentage(($index / $grid-columns));
 		}
 	}
